--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Gallos</title>
 </head>
+
 <body>
-    <h1>Tienda online de los Gallos de oro</h1>    
+    <h1>Tienda online de los Gallos de oro</h1> 
+    <p>Esta es una pagina en blanco que servira como estructura para nuestro proyecto de la pagina web.</p>   
 </body>
 </html>
