--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
- 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,6 +20,9 @@
 
 <body>
     <div class="container">
+
+        <h1>Tienda online Gallos de oro</h1>
+
         <!--fila uno-->
         <div class="row" id="f1">
             <!--collapse -->
@@ -28,13 +31,13 @@
                 <div class="card">
                     <div class="card-header" id="headingOne">
                         <h2 class="mb-0">
-                            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                            <button class="btn btn-link p-3 mb-2 bg-primary text-white" type="button" data-toggle="collapse" data-target="#collapseOne"                            
                                 aria-expanded="false" aria-controls="collapseOne">
                                 Misión
                             </button>
                         </h2>
                     </div>
-                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#acordion1">
+                    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#acordion1">
                         <div class="card-body">
                             Ofrecer productos de plata .925 de Taxco de calidad, para satisfacer gustos variados.
                         </div>
@@ -44,7 +47,7 @@
                 <div class="card">
                     <div class="card-header" id="headingTwo">
                         <h2 class="mb-0">
-                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                            <button class="btn btn-link collapsed p-3 mb-2 bg-success text-white" type="button" data-toggle="collapse"
                                 data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                 Visión.
                             </button>
@@ -61,7 +64,7 @@
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <h2 class="mb-0">
-                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                            <button class="btn btn-link collapsed p-3 mb-2 bg-danger text-white" type="button" data-toggle="collapse"
                                 data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Objetivo
                             </button>
@@ -79,7 +82,7 @@
                 <div class="card">
                     <div class="card-header" id="headingFour">
                         <h2 class="mb-0">
-                            <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
+                            <button class="btn btn-link collapsed p-3 mb-2 bg-warning text-dark" type="button" data-toggle="collapse"
                                 data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                 Valores
                             </button>
